autotests/syntax-tests/tests/negative/negative93.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var $EENUM Name Name = ; = ; } ; 